admission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admission-staging
  namespace: admission-app
  labels:
    app: admission
    instance: staging
spec:
  replicas: 3
  selector:
    matchLabels:
      app: admission
      instance: staging
  template:
    metadata:
      labels:
        app: admission
        instance: staging
    spec:
      imagePullSecrets:
        - name: admission-docker-registry-pull-secret
      containers:
        - name: admission-app
          image: registry.gitlab.com/unibuc/directia-itc/admission-app:main
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
